<resources>
    <string name="app_name">Glia</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">160037534140521</string>
    <string name="add_author">Add author</string>
    <string name="text_wrote">Текст проверен</string>
    <string name="text_checked">Текст проверен</string>
    <string name="video_collected">Видео собрано</string>
    <string name="video_mounted">Видео собрано</string>
    <string name="caption_wrote">Кэпшен написан</string>
    <string name="caption_checked">Кэпшен проверен</string>
    <string name="enter_title">Enter ticket title...</string>
    <string name="category">Category...</string>
    <string name="description">Description...</string>
    <string name="profession">Profession...</string>
    <string name="fee">Fee...</string>
    <string name="name">Name...</string>
    <string name="spending">Spending...</string>
    <string name="comment">Comment...</string>
    <string name="delete">Delete</string>
    <string name="change">change</string>
    <string name="reached_total">Reached total</string>
    <string name="reached_unique">Reached unique</string>
    <string name="approval_with_the_editor">Одобренно с гл.Редактором</string>
    <string name="create">Create</string>
    <string name="enter_tag_name">Enter tag name</string>
    <string name="cancel">Cancel</string>

    <string-array name="tagsExample">
        <item>Tag1</item>
        <item>Tag2</item>
        <item>Tag3</item>
        <item>Tag4</item>
    </string-array>

    <string-array name="perms_array">
        // User Data Permissions
        <item>basic_info</item>
        <item>public_profile</item>
        <item>email</item>
        <item>publish_actions</item>
        <item>user_about_me</item>
        <item>user_activities</item>
        <item>user_birthday</item>
        <item>user_mobile_phone</item>
        <item>user_education_history</item>
        <item>user_friends</item>
        <item>user_games_activity</item>
        <item>user_hometown</item>
        <item>user_interests</item>
        <item>user_likes</item>
        <item>user_location</item>
        <item>user_photos</item>
        <item>user_posts</item>
        <item>user_relationship_details</item>
        <item>user_relationships</item>
        <item>user_religion_politics</item>
        <item>user_status</item>
        <item>user_tagged_places</item>
        <item>user_videos</item>
        <item>user_website</item>
        <item>user_work_history</item>

        // Other Permissions
        <item>manage_notifications</item>
        <item>read_custom_friendlists</item>
        <item>read_insights</item>
        <item>read_mailbox</item>
        <item>read_stream</item>
        <item>read_audience_network_insights</item>
        <item>manage_pages</item>


        // Privacy
        <item>ONLY_ME</item>
        <item>FRIENDS</item>
        <item>EVERYONE</item>
    </string-array>
</resources>
