<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_tag_name"
                android:inputType="textPersonName" />

            <com.flask.colorpicker.ColorPickerView
                android:id="@+id/color_picker_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alphaSlider="true"
                app:density="12"
                app:lightnessSlider="true"
                app:wheelType="FLOWER"
                app:lightnessSliderView="@+id/v_lightness_slider"
                app:alphaSliderView="@+id/v_alpha_slider"
                />

            <com.flask.colorpicker.slider.LightnessSlider
                android:id="@+id/v_lightness_slider"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />

            <com.flask.colorpicker.slider.AlphaSlider
                android:id="@+id/v_alpha_slider"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createTagButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create" />

        <Button
            android:id="@+id/cancelTagButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>